--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.lebogang.triwizard">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,6 +11,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <!-- SpellsActivity -->
+        <activity android:name=".SpellsActivity"
+            android:parentActivityName=".MainActivity"
+            android:launchMode="singleTop"
+            android:label="@string/spells"/>
+
+        <!-- MainActivity -->
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,6 +26,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- HousesActivity -->
+        <activity android:name=".HousesActivity"
+            android:parentActivityName=".MainActivity"
+            android:launchMode="singleTop"
+            android:label="@string/houses"/>
+
     </application>
 
 </manifest>
