--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.lebogang.triwizard">
 
+    <!-- Asking permission to access the internet -->
     <uses-permission android:name="android.permission.INTERNET" />
+
+    <!-- Asking permission to access the WiFi states -->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
+    <!-- Asking permission to access the phone's network states -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
